// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > alerts and prevents navigation if not logged in 1`] = `
<div>
  <header
    aria-label="Main header"
    class="header"
  >
    <a
      aria-label="Go to home page"
      class="header-content"
      href="/"
    >
      <img
        alt="Sofa Icon"
        class="sofa-icon"
        src="/src/assets/couch.svg"
      />
      <h1
        class="header-title"
      >
        Lyrical Lounge
      </h1>
    </a>
    <nav
      aria-label="Main navigation"
      class="navbar"
    >
      <a
        aria-label="Go to favorites page"
        class="navButton "
        href="/favorites"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-heart fa-2x navIcon"
          data-icon="heart"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8l0-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5l0 3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20-.1-.1s0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5l0 3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2l0-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"
            fill="currentColor"
          />
        </svg>
        <span
          class="navText"
        >
          Favorited songs
        </span>
      </a>
      <a
        aria-label="Go to playlists page"
        class="navButton "
        href="/playlists"
      >
        <svg
          class="navIcon musicIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2"
          />
          <path
            d="M12 3v10h-1V3z"
            fill-rule="evenodd"
          />
          <path
            d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z"
          />
          <path
            d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="navText"
        >
          Your playlists
        </span>
      </a>
      <div>
        Mock Profile
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header Component > highlights the active navigation link 1`] = `
<div>
  <header
    aria-label="Main header"
    class="header"
  >
    <a
      aria-label="Go to home page"
      class="header-content"
      href="/"
    >
      <img
        alt="Sofa Icon"
        class="sofa-icon"
        src="/src/assets/couch.svg"
      />
      <h1
        class="header-title"
      >
        Lyrical Lounge
      </h1>
    </a>
    <nav
      aria-label="Main navigation"
      class="navbar"
    >
      <a
        aria-label="Go to favorites page"
        class="navButton active"
        href="/favorites"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-heart fa-2x navIcon"
          data-icon="heart"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8l0-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5l0 3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20-.1-.1s0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5l0 3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2l0-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"
            fill="currentColor"
          />
        </svg>
        <span
          class="navText"
        >
          Favorited songs
        </span>
      </a>
      <a
        aria-label="Go to playlists page"
        class="navButton "
        href="/playlists"
      >
        <svg
          class="navIcon musicIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2"
          />
          <path
            d="M12 3v10h-1V3z"
            fill-rule="evenodd"
          />
          <path
            d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z"
          />
          <path
            d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="navText"
        >
          Your playlists
        </span>
      </a>
      <div>
        Mock Profile
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header Component > navigates to favorites or playlists if logged in 1`] = `
<div>
  <header
    aria-label="Main header"
    class="header"
  >
    <a
      aria-label="Go to home page"
      class="header-content"
      href="/"
    >
      <img
        alt="Sofa Icon"
        class="sofa-icon"
        src="/src/assets/couch.svg"
      />
      <h1
        class="header-title"
      >
        Lyrical Lounge
      </h1>
    </a>
    <nav
      aria-label="Main navigation"
      class="navbar"
    >
      <a
        aria-label="Go to favorites page"
        class="navButton "
        href="/favorites"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-heart fa-2x navIcon"
          data-icon="heart"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8l0-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5l0 3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20-.1-.1s0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5l0 3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2l0-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"
            fill="currentColor"
          />
        </svg>
        <span
          class="navText"
        >
          Favorited songs
        </span>
      </a>
      <a
        aria-label="Go to playlists page"
        class="navButton "
        href="/playlists"
      >
        <svg
          class="navIcon musicIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2"
          />
          <path
            d="M12 3v10h-1V3z"
            fill-rule="evenodd"
          />
          <path
            d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z"
          />
          <path
            d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="navText"
        >
          Your playlists
        </span>
      </a>
      <div>
        Mock Profile
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header Component > navigates to homepage when the title is clicked 1`] = `
<div>
  <header
    aria-label="Main header"
    class="header"
  >
    <a
      aria-label="Go to home page"
      class="header-content"
      href="/"
    >
      <img
        alt="Sofa Icon"
        class="sofa-icon"
        src="/src/assets/couch.svg"
      />
      <h1
        class="header-title"
      >
        Lyrical Lounge
      </h1>
    </a>
    <nav
      aria-label="Main navigation"
      class="navbar"
    >
      <a
        aria-label="Go to favorites page"
        class="navButton "
        href="/favorites"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-heart fa-2x navIcon"
          data-icon="heart"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8l0-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5l0 3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20-.1-.1s0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5l0 3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2l0-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"
            fill="currentColor"
          />
        </svg>
        <span
          class="navText"
        >
          Favorited songs
        </span>
      </a>
      <a
        aria-label="Go to playlists page"
        class="navButton "
        href="/playlists"
      >
        <svg
          class="navIcon musicIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2"
          />
          <path
            d="M12 3v10h-1V3z"
            fill-rule="evenodd"
          />
          <path
            d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z"
          />
          <path
            d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="navText"
        >
          Your playlists
        </span>
      </a>
      <div>
        Mock Profile
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header Component > renders the header component 1`] = `
<div>
  <header
    aria-label="Main header"
    class="header"
  >
    <a
      aria-label="Go to home page"
      class="header-content"
      href="/"
    >
      <img
        alt="Sofa Icon"
        class="sofa-icon"
        src="/src/assets/couch.svg"
      />
      <h1
        class="header-title"
      >
        Lyrical Lounge
      </h1>
    </a>
    <nav
      aria-label="Main navigation"
      class="navbar"
    >
      <a
        aria-label="Go to favorites page"
        class="navButton "
        href="/favorites"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-heart fa-2x navIcon"
          data-icon="heart"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8l0-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5l0 3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20-.1-.1s0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5l0 3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2l0-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"
            fill="currentColor"
          />
        </svg>
        <span
          class="navText"
        >
          Favorited songs
        </span>
      </a>
      <a
        aria-label="Go to playlists page"
        class="navButton "
        href="/playlists"
      >
        <svg
          class="navIcon musicIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2"
          />
          <path
            d="M12 3v10h-1V3z"
            fill-rule="evenodd"
          />
          <path
            d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z"
          />
          <path
            d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="navText"
        >
          Your playlists
        </span>
      </a>
      <div>
        Mock Profile
      </div>
    </nav>
  </header>
</div>
`;
